@@ -83,4 +83,12 @@ int fd_set_nonblock(int s);
  */
 int is_pow2(size_t num);
 
+/**
+ * Write iov vector into a buffer.
+ * @param buffer: to write data into. 
+ * @param iov: iov vector
+ * @param iovlen: length of iov vector
+ */
+void write_iov_buffer(ldns_buffer* buffer, struct iovec* iov, size_t iovlen);
+
 #endif /* NET_HELP_H */
